# ikon-crypto

./: .gitignore  README.md  stack.yaml
ikon-crypto/: README.md  build.sh  ikon-crypto.cabal  run.sh  stack.yaml
ikon-crypto/app/: Main.hs
ikon-crypto/src/: Analyze.hs  CryptoCurrency.hs  CryptoRate.hs  CryptoRateString.hs  Encryption.hs  Global.hs  Lib.hs  Request.hs  Storage.hs  UserConfig.hs
ikon-crypto/test/: LibSpec.hs  OneCryptoRate.json  TwoCryptoRates.json
