name:                ikon-crypto
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ikon-crypto
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , timers
                     , suspend
                     , type-operators
                     , bytestring
                     , wreq
                     , lens
                     , time
                     , directory
                     , ghc
  other-modules:       Request
                     , Storage
  extensions:          LambdaCase
                     , BangPatterns   
                     , DuplicateRecordFields
                     , TransformListComp
                     , TupleSections
                     , RecordWildCards
                     , NamedFieldPuns
                     , DeriveGeneric
                     , TypeOperators

executable ikon-crypto
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , ikon-crypto

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ikon-crypto
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/githubuser/ikon-crypto
